ChangeLog of Chess Opponent

Copyright (C) 2020 David Yockey
Copyright (C) 2001-2020 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.

2020-06-??  David Yockey <dyockey@diffengine.net>

	* Forked GNU Chess 6.2.6
	* Renamed the forked version from "GNU Chess" to "Chess Opponent", making
	  necessary changes throughout the source code and documentation
	* Modified to preclude board display unless directly requested
	* Added command line argument to run in "gnuchess mode"
	* Added commands and support for showing the board from either black or
	  white perspective
	* Blocked use of castling by moving a king by two squares which would
	  otherwise be improperly handled
	* Modified translations in accordance with new name and features
	* Moved man page from section 1 (Executable programs or shell commands) to
	  section 6 (Games)


== GNU Chess ChangeLog file, incorporated herein in toto ==

2020-04-18  Antonio Ceballos  <aceballos@gmail.com>

	* ChangeLog: Release 6.2.6
	* NEWS: Release 6.2.6
	* configure.ac: Release 6.2.6
	* doc/version.texi: Release 6.2.6
	* po/gnuchess.pot: Update POT file
	* po/*.po: Update translations

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* ChangeLog: Pre-release 6.2.6-pre3
	* NEWS: Pre-release 6.2.6-pre3
	* configure.ac: Pre-release 6.2.6-pre3
	* doc/version.texi: Pre-release 6.2.6-pre3

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* po/gnuchess.pot: Update POT file.

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/cmd.cc: Fix buffer overflow while copying string

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/pgn.cc: Improve comment for translators.

2020-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* test/commands/test_command.tcl: Add colon at the end of expected output.
